style: projects page

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import '_variables.scss';
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -7,13 +9,14 @@ body {
   @media (prefers-color-scheme: dark) {
     body {
       background-color: #212529;
+      color: white;
     }
   }
 
   button {
     border: none;
     background-color: white;
-    border: 1px solid rgb(204, 204, 204);
+    border: 1px solid $border-light;
     font-weight: 500;
     border-radius: 5px;
     cursor: pointer;
@@ -21,3 +24,15 @@ body {
 
 }
 
+input[type="text"] {
+  border: 1px solid $border-light;
+  border-radius: $border-radius;
+  box-sizing: border-box;
+}
+
+textarea {
+  box-sizing: border-box;
+    resize: none;
+  border: 1px solid $border-light;
+  border-radius: $border-radius;
+}
