--- a/src/normalize.css
+++ b/src/normalize.css
@@ -21,7 +21,7 @@ html {
  */
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
   margin: 0;
 }
 
