--- a/src/app.scss
+++ b/src/app.scss
@@ -30,7 +30,7 @@ input[type="text"], input[type="url"] {
   box-sizing: border-box;
   border: none;
   border-radius: 5px;
-  padding: 0.5em 0.5em;
+  padding: 0.5em 0;
   width: 100%;
   &:focus {
     outline: none;
