--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    background-color: #f8f9fa;
+    background-color: white;
   }
 
   @media (prefers-color-scheme: dark) {
