fix: remove colour scheme media query

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,12 +7,12 @@ body {
     background-color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #212529;
-        color: white;
-    }
-}
+// @media (prefers-color-scheme: dark) {
+//     body {
+//         background-color: #212529;
+//         color: white;
+//     }
+// }
 
 %btn-core {
     background-color: white;
